--- a/Thug Knowledge - Duoc UC/Index.html
+++ b/Thug Knowledge - Duoc UC/Index.html
@@ -73,7 +73,7 @@
     <div id="LCDLS" class="container-xxl p-5 my-5 bg-dark text-white">
       <div>
         <div style="float: left">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/HnH1sO4dIVw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/SQymtMNE9BU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div>
           <h1 class="michigan">
