--- a/Thug Knowledge - Duoc UC/Registro2dos.html
+++ b/Thug Knowledge - Duoc UC/Registro2dos.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Registro Usuario con BootStrap + NodeJS</title>
+    <title>Registro Usuario </title>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
      <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
         <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
