--- a/Thug Knowledge - Duoc UC/dashboard.html
+++ b/Thug Knowledge - Duoc UC/dashboard.html
@@ -62,7 +62,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="agregarprodc.html">
+              <a class="nav-link" href="#">
                 <span data-feather="shopping-cart"></span>
                 Productos
               </a>
