--- a/Thug Knowledge - Duoc UC/Index.html
+++ b/Thug Knowledge - Duoc UC/Index.html
@@ -29,8 +29,8 @@
                   <a class="nav-link" href="Eventos.html">Eventos</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Blog</a>
-              </li>
+                <a class="nav-link" href="dashboard.html">Vista Admin</a>
+            </li>
             </ul>
           </div>
         </div>
@@ -178,6 +178,9 @@
               </li>
               <li>
                 <a href="#!" class="text-white">Politica de privacidad</a>
+              </li>
+              <li>
+                <a href="Registro2dos.html" class="text-white">Registro </a>
               </li>
             </ul>
           </div>
