--- a/Thug Knowledge - Duoc UC/dashboard.html
+++ b/Thug Knowledge - Duoc UC/dashboard.html
@@ -34,6 +34,27 @@
 
 <body>
 
+  <script>
+    fetch('https://jsonplaceholder.typicode.com/users')
+            .then(response => response.json())
+            .then(data => {
+                // código para agregar los datos a la tabla
+            });
+
+
+        fetch('https://jsonplaceholder.typicode.com/users')
+            .then(response => response.json())
+            .then(data => {
+                var tabla = document.getElementById("mi-tabla").getElementsByTagName('tbody')[0];
+                data.forEach(elemento => {
+                    var fila = tabla.insertRow();
+                    fila.insertCell().innerHTML = elemento.id;
+                    fila.insertCell().innerHTML = elemento.name;
+                    fila.insertCell().innerHTML = elemento.email;
+                });
+            });
+  </script>
+
   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">Thug</a>
     <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse"
@@ -110,16 +131,16 @@
           <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                   <div class="table-responsive">
-                      <table class="table table-dark">
-                          <thead>
-                              <tr>
-                                  <th class="centered">ID</th>
-                                  <th class="centered">Nombre</th>
-                                  <th class="centered">Usuario</th>
-                                  <th class="centered">Email</th>
-                              </tr>
-                          </thead>
-                          <tbody id="tablausuarios"></tbody>
+                      <table class="table table-dark" id="mi-tabla">
+                        <thead>
+                          <tr>
+                            <th scope="col">id</th>
+                            <th scope="col">name</th>
+                            <th scope="col">email</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
                       </table>
                   </div>
               </div>
