--- a/Thug Knowledge - Duoc UC/agregarprodc.html
+++ b/Thug Knowledge - Duoc UC/agregarprodc.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="css/agregarprod.css">
 
-  <script src="js/agregarprod.js"></script>
+  
 
 
 
@@ -32,9 +32,20 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Montserrat:wght@700&family=Poppins:ital,wght@1,100&family=Prompt:ital,wght@1,100&display=swap" rel="stylesheet">
 
+
+
+  <!-- js -->
+  <script src="js/agregarprod.js"></script>
+
+
+
 </head>
 
 <body>
+
+
+
+
 
   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="Index.html">Thug</a>
@@ -109,30 +120,39 @@
         </div>
         <div id="cajaprods">
         <h1>Registro de productos</h1>
-        <form onsubmit="return false;">
-          <label for="nombre">Nombre:</label>
-          <input type="text" id="nombre" name="nombre" required>
-          <br>
-          <label for="imagen">Imagen:</label>
-          <input type="file" id="imagen" name="imagen" accept="image/*" required>
-          <br>    
-          <label for="cantidad">Cantidad:</label>
-          <input type="number" id="cantidad" name="cantidad" min="1" required>
-          <br> 
-          <label for="precio">Precio:</label>
-          <input type="number" id="precio" name="precio" min="0.01" step="0.01" required>
-          <br> 
-          <input type="submit" value="Agregar producto" onclick="agregarProducto()">
-        </form>
-        </div>
-        <div id="productos">
-          <!-- Aquí se imprimirán los productos agregados -->
-        </div>
+        <form id="formulario-producto" method="post" enctype="multipart/form-data">
+          <div class="mb-3">
+              <label for="nombre" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="nombre" name="nombre" required>
+          </div>
+  
+          <div class="mb-3">
+              <label for="imagen" class="form-label">Agregar Imagen</label>
+              <input type="file" class="form-control" id="imagen" name="imagen" accept="image/*" required>
+          </div>
+  
+          <div class="mb-3">
+              <label for="cantidad" class="form-label">Cantidad</label>
+              <input type="number" class="form-control" id="cantidad" name="cantidad" min="1" required>
+          </div>
+  
+          <div class="mb-3">
+              <label for="precio" class="form-label">Precio</label>
+              <input type="number" class="form-control" id="precio" name="precio" min="0.01" step="0.01" required>
+          </div>
+  
+          <div class="mb-3 text-center">
+              <button type="submit" class="btn btn-primary">Agregar</button>
+          </div>
+      </form>
+  
+        </div>    
          
         </div>
       </main>
     </div>
   </div>
+
 
 
   <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js"
